--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -331,7 +331,7 @@ functions:
                     index-url = https://artifactory.corp.mongodb.com/artifactory/api/pypi/pypi/simple
                     trusted-host = artifactory.corp.mongodb.com
                     extra-index-url = https://pypi.org/simple
-                                      https://$perf_jira_user:$perf_jira_pw@artifactory.corp.mongodb.com/artifactory/api/pypi/mongodb-dag-local/simple" > ~/.pip/pip.conf
+                                      https://${perf_jira_user}:${perf_jira_pw}@artifactory.corp.mongodb.com/artifactory/api/pypi/mongodb-dag-local/simple" > ~/.pip/pip.conf
           virtualenv -p /opt/mongodbtoolchain/v3/bin/python3 signal_processing_venv
           source ./signal_processing_venv/bin/activate
           pip install dag-signal-processing~=1.0
