--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -327,12 +327,12 @@ functions:
       params:
         working_dir: work
         script: |
+          virtualenv -p /opt/mongodbtoolchain/v3/bin/python3 signal_processing_venv
           echo "[global]
                     index-url = https://artifactory.corp.mongodb.com/artifactory/api/pypi/pypi/simple
                     trusted-host = artifactory.corp.mongodb.com
                     extra-index-url = https://pypi.org/simple
-                                      https://${perf_jira_user}:${perf_jira_pw}@artifactory.corp.mongodb.com/artifactory/api/pypi/mongodb-dag-local/simple" > ~/.pip/pip.conf
-          virtualenv -p /opt/mongodbtoolchain/v3/bin/python3 signal_processing_venv
+                                      https://${perf_jira_user}:${perf_jira_pw}@artifactory.corp.mongodb.com/artifactory/api/pypi/mongodb-dag-local/simple" > ./signal_processing_venv/pip.conf
           source ./signal_processing_venv/bin/activate
           pip install dag-signal-processing~=1.0
           detect-changes --mongo-uri mongodb+srv://${dsi_analysis_atlas_user}:${dsi_analysis_atlas_pw}@performancedata-g6tsc.mongodb.net/perf $([[ "${is_patch}" == "true" ]] && echo '--is-patch' || echo '--is-not-patch') --task-id ${task_id}
