--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -327,15 +327,8 @@ functions:
       params:
         working_dir: work
         script: |
-          virtualenv -p /opt/mongodbtoolchain/v3/bin/python3 signal_processing_venv
-          echo "[global]
-                    index-url = https://artifactory.corp.mongodb.com/artifactory/api/pypi/pypi/simple
-                    trusted-host = artifactory.corp.mongodb.com
-                    extra-index-url = https://pypi.org/simple
-                                      https://${perf_jira_user}:${perf_jira_pw}@artifactory.corp.mongodb.com/artifactory/api/pypi/mongodb-dag-local/simple" > ./signal_processing_venv/pip.conf
-          source ./signal_processing_venv/bin/activate
-          pip install dag-signal-processing~=1.0
-          detect-changes --mongo-uri mongodb+srv://${dsi_analysis_atlas_user}:${dsi_analysis_atlas_pw}@performancedata-g6tsc.mongodb.net/perf $([[ "${is_patch}" == "true" ]] && echo '--is-patch' || echo '--is-not-patch') --task-id ${task_id}
+          source buildscripts/signal_processing_setup.sh
+          detect-changes
     - command: shell.exec
       type: test
       params:
@@ -351,8 +344,8 @@ functions:
       params:
         working_dir: work
         script: |
-          source ./signal_processing_venv/bin/activate
-          detect-outliers --mongo-uri mongodb+srv://${dsi_analysis_atlas_user}:${dsi_analysis_atlas_pw}@performancedata-g6tsc.mongodb.net/perf $([[ "${is_patch}" == "true" ]] && echo '--is-patch' || echo '--is-not-patch') --task-id ${task_id}
+          source buildscripts/signal_processing_setup.sh
+          detect-outliers
     - command: shell.exec
       type: setup
       params:
