--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -169,7 +169,13 @@ functions:
       params:
         working_dir: src
         script: |
-          source buildscripts/signal_processing_setup.sh
+          is_patch=${is_patch}
+          task_id=${task_id}
+          perf_jira_user=${perf_jira_user}
+          perf_jira_pw=${perf_jira_pw}
+          dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
+          dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
+          source ./buildscripts/signal_processing_setup.sh
           detect-changes
     - command: shell.exec
       type: test
