--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -327,6 +327,12 @@ functions:
       params:
         working_dir: work
         script: |
+          is_patch=${is_patch}
+          task_id=${task_id}
+          perf_jira_user=${perf_jira_user}
+          perf_jira_pw=${perf_jira_pw}
+          dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
+          dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
           source buildscripts/signal_processing_setup.sh
           detect-changes
     - command: shell.exec
@@ -344,6 +350,12 @@ functions:
       params:
         working_dir: work
         script: |
+          is_patch=${is_patch}
+          task_id=${task_id}
+          perf_jira_user=${perf_jira_user}
+          perf_jira_pw=${perf_jira_pw}
+          dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
+          dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
           source buildscripts/signal_processing_setup.sh
           detect-outliers
     - command: shell.exec
