--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -175,6 +175,8 @@ functions:
           perf_jira_pw=${perf_jira_pw}
           dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
           dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
+          evergreen_api_key=${evergreen_api_key}
+          evergreen_api_user=${evergreen_api_user}
           source ./buildscripts/signal_processing_setup.sh
           detect-changes
     - command: shell.exec
