--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -333,7 +333,9 @@ functions:
           perf_jira_pw=${perf_jira_pw}
           dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
           dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
-          source buildscripts/signal_processing_setup.sh
+          evergreen_api_key=${evergreen_api_key}
+          evergreen_api_user=${evergreen_api_user}
+          source ./buildscripts/signal_processing_setup.sh
           detect-changes
     - command: shell.exec
       type: test
@@ -350,12 +352,6 @@ functions:
       params:
         working_dir: work
         script: |
-          is_patch=${is_patch}
-          task_id=${task_id}
-          perf_jira_user=${perf_jira_user}
-          perf_jira_pw=${perf_jira_pw}
-          dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
-          dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
           source buildscripts/signal_processing_setup.sh
           detect-outliers
     - command: shell.exec
