--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -325,22 +325,17 @@ functions:
     - command: shell.exec
       params:
         working_dir: work
-        silent: true
         script: |
-          set -o errexit
-
-          # Create the Evergreen API credentials
-          cat > .evergreen.yml <<END_OF_CREDS
-          api_server_host: https://evergreen.mongodb.com/api
-          api_key: "${evergreen_api_key}"
-          user: "${evergreen_api_user}"
-          END_OF_CREDS
-
-    - command: shell.exec
-      params:
-        working_dir: work
-        script: |
-          ../src/dsi/dsi/run-dsi detect-changes --evergreen-api-config .evergreen.yml
+          is_patch=${is_patch}
+          task_id=${task_id}
+          perf_jira_user=${perf_jira_user}
+          perf_jira_pw=${perf_jira_pw}
+          dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
+          dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
+          evergreen_api_key=${evergreen_api_key}
+          evergreen_api_user=${evergreen_api_user}
+          source ../src/buildscripts/signal_processing_setup.sh
+          detect-changes --evergreen-api-config .evergreen.yml
     - command: shell.exec
       type: test
       params:
@@ -356,7 +351,8 @@ functions:
       params:
         working_dir: work
         script: |
-          ../src/dsi/dsi/run-dsi detect-outliers --evergreen-api-config .evergreen.yml
+          source ../src/buildscripts/signal_processing_setup.sh
+          detect-outliers --evergreen-api-config .evergreen.yml
     - command: shell.exec
       type: setup
       params:
